# ShareScribe

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: render-deploy.yml
app/: app.py  app_rough.py  requirements.txt
app/assets/: custom.css
app/components/: __init__.py  callbacks.py  file_display.py  file_upload.py  footer.py  theme_control.py
app/utils/: __init__.py  helper_functions.py  supported_languages.py
working_docs/: testing-code.ipynb
