[project]
name = "sharescribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash==2.17.0",
    "dash-bootstrap-components>=1.7.1",
    "gunicorn==19.7.1",
    "ipykernel>=6.29.5",
    "langcodes>=3.5.0",
    "numpy<2.0",
    "openai>=1.72.0",
    "pandas>=2.2.3",
    "pycountry>=24.6.1",
    "pydub>=0.25.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
]
